# quarreLM

./: .gitignore  README.md  build.zig  build.zig.zon  pyproject.toml
benchmarks/data/: README.md
benchmarks/output/: bench_enet.txt  bench_enet_path.txt  benchmarks_ols.txt
benchmarks/python/: _paths.py  bench_enet.py  bench_enet_path.py  bench_ols.py
py-quarrelm/: .gitignore  pyproject.toml
py-quarrelm/benchmarks/: bench_enet.py  bench_enet_path.py  bench_ols.py
py-quarrelm/benchmarks/output/: initial_benchmarks_debug.txt  initial_benchmarks_enet.txt  initial_benchmarks_fast.txt
py-quarrelm/quarrelm/: _core.py  _params.py  api.py  errors.py  libpath.py
py-quarrelm/tests/: conftest.py  test_arrow_bridge.py  test_core.py  test_enet.py  test_enet_path.py  test_ols.py
py-quarrelm/tests/fixtures/: parity_fits.csv  parity_meta.csv  parity_paths.csv  parity_presets.csv
src/: arrow.zig  blas.zig  bridge.zig  capi.zig  errors.zig  fixtures.zig  lib.zig  main.zig  regression.zig
src/solvers/: common.zig  enet.zig  mod.zig  ols.zig
tools/python/: parity_check.py
tools/r/: parity_generator.r
