[project]
name = "py-quarrelm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "narwhals>=2.17.0",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "polars>=1.38.1",
    "pyarrow>=23.0.1",
    "pytest>=9.0.2",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
